force-app/main/default/objects/Bucket_Fund_Line_Item__c/Bucket_Fund_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Bucket Fund Line Item</label>
    <nameField>
        <displayFormat>BLI-{0000000}</displayFormat>
        <label>Bucket Fund Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bucket Fund Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>