force-app/main/default/objects/Bucket_Fund_Line_Item__c/fields/Bucket_Fund__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Fund__c</fullName>
    <label>Bucket Fund</label>
    <referenceTo>Bucket_Fund__c</referenceTo>
    <relationshipLabel>Bucket Fund Line Items</relationshipLabel>
    <relationshipName>Bucket_Fund_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>