force-app/main/default/objects/Bucket_Fund_Line_Item__c/fields/Finance_Request__c.field-meta.xml
<CustomField>
    <fullName>Finance_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Finance Request</label>
    <referenceTo>Finance_Request__c</referenceTo>
    <relationshipLabel>Bucket Fund Line Items</relationshipLabel>
    <relationshipName>Bucket_Fund_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>